--- a/wordpress.conf
+++ b/wordpress.conf
@@ -4,7 +4,7 @@
  
 	# Indexes + Directory Root.
 	DirectoryIndex index.php index.html
-	DocumentRoot /var/www/wordpress/
+	DocumentRoot /var/www/html/wordpress
  
 	# BEGIN WordPress
 	<IfModule mod_rewrite.c>
